# rinha-de-backend

./: Cargo.toml  Dockerfile  docker-compose.yml  nginx.conf
.github/workflows/: publish.yml  release.yml
src/: background.rs  config.rs  ingest.rs  lib.rs  main.rs  memstore.rs  models.rs  pipeline.rs  redis_ops.rs  routes.rs  state.rs  timeutil.rs
