[package]
name = "rinha-de-backend"
version = "1.0.1"
edition = "2024"
rust-version = "1.85"
description = "Rinha de Backend 2025"

[dependencies]
axum = { version = "0.7", features = ["http1", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
thiserror = "1"
once_cell = "1"
anyhow = "1"
